# saim

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  lefthook.yml  pyproject.toml  requirements.txt
.devcontainer/: dev.docker-compose.yml  devcontainer.json
.github/workflows/: main.yml
configs/dev/: ignore.txt  mkdocs.yml  requirements.dev.txt  requirements.docs.txt  requirements.test.txt  whitelist.py
docs/: index.md
docs/ref/: ref_m.md
src/saim/culture_link/: create_links.py  main.py  validate_cafi.py  validate_file.py  validate_knacr.py
src/saim/culture_link/private/: cached_session.py  constants.py  container.py  cool_down.py  manager.py  robots_txt.py  verify_ccno.py
src/saim/data/: example_ccnos.txt  example_links.csv
src/saim/deposit_link/: create_links.py  main.py  validate_cafi.py  validate_file.py
src/saim/deposit_link/private/: cached_session.py  constants.py  container.py  cool_down.py  manager.py  verify_ccno.py
src/saim/designation/: extract_ccno.py  known_acr_db.py  main.py  manager.py  validate_ccno.py
src/saim/designation/private/: container.py  radix_tree.py
src/saim/history/: extract_dep_des.py  manager.py
src/saim/history/private/: detect.py  split.py  types.py
src/saim/shared/cache/: request.py
src/saim/shared/cafi/: adapter.py
src/saim/shared/data_con/: brc.py  culture.py  deposit.py  designation.py  history.py  strain.py  taxon.py
src/saim/shared/data_con/plugins/: dep_iso.py  location.py  person.py  sample.py
src/saim/shared/data_ops/: clean.py
src/saim/shared/error/: exceptions.py  warnings.py
src/saim/shared/iter/: pack.py
src/saim/shared/jwt/: key_cloak.py
src/saim/shared/knacr/: adapter.py
src/saim/shared/misc/: constants.py  ctx.py
src/saim/shared/parse/: date.py  doi.py  general.py  geo.py  http_url.py  sequence.py  string.py
src/saim/shared/search/: radix_tree.py
src/saim/shared/verify/: types.py
src/saim/strain_matching/: manager.py  match.py
src/saim/strain_matching/private/: ccno_match.py  container.py  strain_match.py
src/saim/taxon_name/: extract_taxa.py  manager.py
src/saim/taxon_name/private/: container.py  gbif.py  lpsn.py  ncbi.py
tests/fixture/: designation.py  links.py  match.py
tests/unit/culture_links/: test_cool_down.py  test_verify_ccno.py
tests/unit/deposit_links/: test_cool_down.py  test_verify_ccno.py
tests/unit/designation/: test_functions.py  test_radix_tree.py  test_sample.py  test_string_functions.py
tests/unit/matching/: test_ccno_matching.py
tests/unit/taxa/: test_search_in_text.py
