[project]
name = "saim"
version = "0.9.30"
description = """A library for identifying strains."""
readme = "README.md"
authors = [
  { name = "Artur Lissin", email = "artur.lissin@dsmz.de" },
  { name = "Julius Witte", email = "julius.witte@dsmz.de" },
]
license = "MIT"
keywords = [
  "python",
  "data",
  "strain matching",
  "strain linking",
  "designations",
]
requires-python = ">=3.13,<4"
dependencies = [
  "pydantic ==2.12.5",
  "playwright ==1.57.0",
  "python-dateutil ==2.9.0.post0",
  "python-keycloak ==7.0.2",
  "requests ==2.32.5",
  "requests-cache ==1.2.1",
  "cafi @ git+https://github.com/LeibnizDSMZ/cafi.git@v0.9.15",
]

[project.scripts]
extract_ccno = "saim.designation.main:run"
verify_links = "saim.culture_link.main:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["saim"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true
default-groups = []

[dependency-groups]
dev = [
  "commitizen ==4.11.2",
  "mypy ==1.19.1",
  "ruff ==0.14.11",
  "codespell ==2.4.1",
  "shellcheck-py ==0.11.0.1",
  "pre-commit-hooks ==6.0.0",
  "vulture ==2.14",
  # commit hooks
  "lefthook ==2.0.13",
  # types
  "types-python-dateutil ==2.9.0.20251115",
  "types-requests ==2.32.4.20260107",
]
test = ["coverage ==7.13.1", "pytest ==9.0.2", "tox ==4.34.1"]
docs = [
  "mkdocs ==1.6.1",
  "mkdocs-material ==9.7.1",
  "mkdocstrings ==1.0.0",
  "mkdocstrings-python ==2.0.1",
]

[tool.codespell]
count = ''
ignore-words = "configs/dev/ignore.txt"
quiet-level = 3
skip = '.mypy,.mypy_cache,.vscore,.tox,*~,*.cache,*.lock,venv,**/data/*.json,*ignore.txt'

[tool.commitizen]
major_version_zero = true
name = "cz_conventional_commits"
tag_format = "v$version"
update_changelog_on_bump = true
version_files = [
  "README.md:^\\[!\\[release:",
  "src/saim/shared/misc/constants.py:^VERSION",
]
version_provider = "uv"
version_type = "semver"

[tool.mypy]
allow_redefinition = false
# misc
allow_untyped_globals = false
check_untyped_defs = false
disallow_any_decorated = false
disallow_any_explicit = false
# any
disallow_any_expr = false
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = false
# functions
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
exclude = [
  "__pycache__",
  "\\.tox/.*",
  "\\.mypy_cache/.*",
  "\\.venv/.*",
  "configs/.*",
]
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
# none
no_implicit_optional = false
strict_equality = true
strict_optional = true
warn_no_return = true
# plugins
plugins = "pydantic.mypy"
# warn
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
line-length = 90
target-version = "py313"
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".tox",
  ".venv",
  "__pypackages__",
  "__pycache__",
  "build",
  "dist",
  "venv",
]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
ignore = [
  "TRY003",
  "N818",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
]
select = ["E", "F", "B", "C90", "S", "PT", "ARG", "PTH", "TRY", "RUF", "N", "D"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.23"]

[tool.tox.env_run_base]
allowlist_externals = ["coverage"]
set_env = { PYTHONPATH = "src" }
commands = [
  [
    "coverage",
    "erase",
  ],
  [
    "coverage",
    "run",
    "--parallel-mode",
    "-m",
    "pytest",
    "{posargs}",
  ],
  [
    "coverage",
    "combine",
  ],
  [
    "coverage",
    "report",
  ],
]

[tool.coverage.run]
source = ["src/saim"]
parallel = true

[tool.coverage.report]
show_missing = false
fail_under = 30

[tool.vulture]
paths = ["configs/dev/whitelist.py", "src"]
ignore_decorators = ["@*"]
ignore_names = ["model_config", "formatwarning"]
make_whitelist = true
min_confidence = 60
sort_by_size = true
verbose = false
